--- a/sample.html
+++ b/sample.html
@@ -6,10 +6,14 @@
 	<title>Document</title>
 </head>
 <body>
+
+
 	<h1>
-		what the hell are you thinking bout
+		git 실습 목차
 	</h1>
-	<p>hello world</p>
+	<hr>
+		<h2>1. 깃 설치</h2>
+</hr>
 	
 	
 </body>
