--- a/sample.html
+++ b/sample.html
@@ -5,15 +5,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 </head>
-<body>
-
 
 	<h1>
-		git 실습 목차
+		깃 실습 목차
 	</h1>
 	<hr>
 		<h2>1. 깃 설치</h2>
-</hr>
+		<h2>2. 소스트리 설치</h2>
+		<h2>3. 로컬 저장소 생성</h2>
+		<h2>4. 원격 저장소 생성</h2>
+		<h2>5. 버전 관리 시작</h2>
+		<h2>6. 새로운 버전 관리</h2>
+		<h2>7. 자료 백업 복구</h2>
+	</hr>
+	
 	
 	
 </body>
